# duckerman_telegram_bot

./: LICENSE  Makefile  buf.yaml  pyproject.toml  requirements.txt
src/: app.py  bot.py  grpc_client.py
src/handlers/: sticker.py
src/telegram_bot/: app.py  grpc_client.py
src/telegram_bot/handlers/: sticker.py
